--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
           <div class="header-list">
               <ul>
-                  <a href="https://takashi0821.github.io/home_0413/."><li>home</li></a>
+                  <a href="https://takashi0821.github.io/home/"><li>home</li></a>
                   <a href="#1"><li>about</li></a>
                   <a href="#2"><li>portfolio</li></a>
               </ul>
