--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <title>Portfolio_2</title>
       <link rel="stylesheet" href="stylesheet.css">
       <link rel="stylesheet" href="responsive.css">
-      <script type="text/javascript" src="./scripts/jQuery.js"></script>
+      <script type="text/javascript" src="js/jquery-3.4.0.min.js"></script>
       <script type="text/javascript">
         $(function(){
             $('a[href^=#]').click(function(){
